--- a/css/main.css
+++ b/css/main.css
@@ -56,19 +56,17 @@ table {
 
 #head {
     background-image: url(../images/bg_head.png);
-    background-repeat: repeat-x;
-    height: 80px;
+    background-repeat: repeat-x;    
 }
 #logosite {
     background-image: url(../images/sitelogo.png);
     background-repeat: no-repeat;
-    background-position: left top;
-    display: block;
-    float: left;
+    background-position: left top;    
+    float: right;
     height: 73px;
     width: 300px;
-    position: relative;
-    margin-left: 1px;
+    margin-top: 5px;
+    margin-right: 5px;
 }
 #logosite_desc {
     display: inherit;
@@ -91,43 +89,42 @@ table {
     line-height: 18px;
 }
 #logocard {
-    float: right;
-    width: 250px;
-    position: relative;
+    float: left;
+    width: 315px;    
+    margin-top: 5px;
+    margin-left: 5px;
 }
 #logocard h2 {
     font-family: Verdana, Geneva, sans-serif;
     font-size: 18px;
     font-weight: normal;
-    color: #4374cd;
-    display: block;
-    margin-left: 15px;
+    color: #4374cd;        
     margin-bottom: 3px;
     line-height:20px !important;
+    text-align: center;
 }
 #logocard p {
-    font-family: Tahoma, Geneva, sans-serif;
-    font-size: 9px;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 12px;
     color: #666;
+    text-align: center;
 }
 #logocard img {
-    position: absolute;
-    left: -41px;
-    top: 1px;
+    float: left;
 }
 #hdlink {
     clear: both;
     float: right;
     width: 150px;
-    margin-top: -8px;
-    margin-right: 35px;
+    margin-top: -4px;
+    margin-right: 5px;
     position:relative;
 }
 #hdlink a {
     display: block;
     font-family: Verdana, Geneva, sans-serif;
     font-weight: bold;
-    color: #4374D5;
+    color: #FFF;
     font-size: 12px;
     text-align: right;
     background-image: url(../images/lockIcon.png);
@@ -296,8 +293,7 @@ table {
 
 #navbar {
     background-color: #175f9c;
-    height: 70px;
-    margin-top: 20px;
+    height: 70px;    
     box-shadow: 0px 5px 8px #919191;
     margin-bottom: 15px;
 }
